# snort3_demo

./: .gitignore  ChangeLog  ChangeLog.md  README  README.adoc  run_one  run_test.sh
Dockerfiles/ubuntu-20.10/: Dockerfile
perf/: README.adoc
perf/2.9/: ac_bnfa.conf  ac_full.conf  all.conf  appid.conf  base.conf  decode.conf  detect-max.conf  detect-min.conf  inspect.conf  max.conf  min.conf  odp.conf  perf_test.sh  prune.conf  repeat.sh  setup.sh  snort.conf  stream.conf  validate.sh
perf/3.0/: all.lua  all.rules  appid.lua  common.lua  decode.lua  detect-max.lua  detect-min.lua  events_extractor.lua  events_filtered_extractor.lua  events_ips.lua  hosts.lua  inspect.lua  max.lua  mem_scale.sh  min.lua  network-awareness.lua  perf_test.sh  prune.lua  repeat.sh  setup.sh  snort.lua  stream.lua  validate.sh
perf/common/: get_1m_1460.sh  get_1m_1460_no_ack.sh  get_1m_16k.sh  get_1m_1k.sh  get_1m_2k.sh  get_1m_4k.sh  get_1m_8k.sh  get_250k.sh  setup.sh  tcp_1.sh  tcp_1000.sh  tcp_128.sh  tcp_450.sh  udp_1000.sh  udp_128.sh  udp_1518.sh  udp_450.sh
tests/dump_config/: README.adoc  json.lua  load.lua  snort.lua  test.bats
tests/ftp_client/: expected  test.bats
tests/ftp_data/: README  test.bats
tests/ftp_server/: README  snort.lua  test.bats
tests/ips_action_react/: README  expected  expected.pcap  myhttp.pcap  snort.lua  test.bats
tests/ips_options/so_and_soid/so_rule/: .gitignore  CMakeLists.txt  Makefile
tests/javascript_normalization/: README.adoc  expected  snort.lua
tests/snort2lua/: README.adoc  expected  expected.net  expected.policy  test.bats  (+1 more)
(+546 files in other folders)
